Fix double border on autofilled Full Name field - remove all autofill borders

--- a/client/src/pages/Auth.css
+++ b/client/src/pages/Auth.css
@@ -403,13 +403,24 @@
   opacity: 0.5;
 }
 
-.input-wrapper input:-webkit-autofill,
-.input-wrapper input:-webkit-autofill:hover,
+.input-wrapper input:-webkit-autofill {
+  -webkit-box-shadow: none !important;
+  -webkit-text-fill-color: var(--input-text) !important;
+  transition: background-color 5000s ease-in-out 0s !important;
+  caret-color: var(--input-text) !important;
+  border: none !important;
+}
+
+.input-wrapper input:-webkit-autofill:hover {
+  -webkit-box-shadow: none !important;
+  -webkit-text-fill-color: var(--input-text) !important;
+  border: none !important;
+}
+
 .input-wrapper input:-webkit-autofill:focus {
   -webkit-box-shadow: none !important;
   -webkit-text-fill-color: var(--input-text) !important;
-  transition: background-color 5000s ease-in-out 0s;
-  caret-color: var(--input-text);
+  border: none !important;
 }
 
 .input-error {
